<resources>
    <string name="app_name">Allergen Alert</string>
    <string name="logo_text">AllergenAlert Logo</string>
    <string name="upload">Upload Photo</string>
    <string name="title">Choose your allergies:</string>
    <string name="allergy1">Choice 1</string>
    <string name="allergy2">Choice 2</string>
    <string name="allergy3">Choice 3</string>
    <string name="allergy4">Choice 4</string>
    <string name="allergy5">Choice 5</string>
    <string name="allergy6">Choice 6</string>
    <string name="allergy7">Choice 7</string>
    <string name="submit_button">Submit Allergies</string>
    <string name="live">You\'ll live</string>
    <string name="die">You will die</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome User1!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>